Closed Bug 1711832 Opened 3 years ago Closed 3 years ago

[gcc 11] error: '%s' directive argument is null [-Werror=format-overflow=]

Categories

(Core :: JavaScript Engine, defect)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox90 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

Details

Attachments

(1 file)

[task 2021-05-19T04:09:11.627Z] 04:09:11     INFO -  In file included from /builds/worker/fetches/sysroot/usr/include/stdio.h:937,
[task 2021-05-19T04:09:11.627Z] 04:09:11     INFO -                   from /builds/worker/workspace/obj-build/dist/system_wrappers/stdio.h:3,
[task 2021-05-19T04:09:11.627Z] 04:09:11     INFO -                   from /builds/worker/workspace/obj-build/dist/include/mozilla/StackWalk.h:14,
[task 2021-05-19T04:09:11.627Z] 04:09:11     INFO -                   from /builds/worker/workspace/obj-build/dist/include/mozilla/Assertions.h:24,
[task 2021-05-19T04:09:11.627Z] 04:09:11     INFO -                   from /builds/worker/workspace/obj-build/dist/include/mozilla/Casting.h:12,
[task 2021-05-19T04:09:11.628Z] 04:09:11     INFO -                   from /builds/worker/checkouts/gecko/js/src/jstypes.h:24,
[task 2021-05-19T04:09:11.628Z] 04:09:11     INFO -                   from /builds/worker/workspace/obj-build/dist/include/js/BuildId.h:15,
[task 2021-05-19T04:09:11.628Z] 04:09:11     INFO -                   from /builds/worker/checkouts/gecko/js/src/vm/BuildId.cpp:9,
[task 2021-05-19T04:09:11.628Z] 04:09:11     INFO -                   from Unified_cpp_js_src16.cpp:2:
[task 2021-05-19T04:09:11.628Z] 04:09:11     INFO -  In function 'int fprintf(FILE*, const char*, ...)',
[task 2021-05-19T04:09:11.628Z] 04:09:11     INFO -      inlined from 'bool js::DumpRealmPCCounts(JSContext*)' at /builds/worker/checkouts/gecko/js/src/vm/BytecodeUtil.cpp:223:12:
[task 2021-05-19T04:09:11.628Z] 04:09:11    ERROR -  /builds/worker/fetches/sysroot/usr/include/x86_64-linux-gnu/bits/stdio2.h:97:24: error: '%s' directive argument is null [-Werror=format-overflow=]
[task 2021-05-19T04:09:11.628Z] 04:09:11     INFO -     97 |   return __fprintf_chk (__stream, __USE_FORTIFY_LEVEL - 1, __fmt,
[task 2021-05-19T04:09:11.628Z] 04:09:11     INFO -        |          ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2021-05-19T04:09:11.628Z] 04:09:11     INFO -     98 |                         __va_arg_pack ());
[task 2021-05-19T04:09:11.628Z] 04:09:11     INFO -        |                         ~~~~~~~~~~~~~~~~~
[task 2021-05-19T04:09:11.628Z] 04:09:11     INFO -  cc1plus: all warnings being treated as errors
Assignee: nobody → mh+mozilla
Status: NEW → ASSIGNED
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/4f7e381a2070
Make GCC happy about a possible NULL filename in js::DumpRealmPCCounts. r=jandem
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
Blocks: 1714004
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: