Bug 1711832 - Make GCC happy about a possible NULL filename in js::DumpRealmPCCounts. r=jandem

Differential Revision: https://phabricator.services.mozilla.com/D115448